--- a/model/sports_person_classifier.ipynb
+++ b/model/sports_person_classifier.ipynb
@@ -1527,17 +1527,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "id": "c0fa1d56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['output/saved_model.pkl']"
+       "['../server/artifacts/saved_model.pkl']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,18 +1545,18 @@
    "source": [
     "import joblib\n",
     "\n",
-    "joblib.dump(best_clf, \"output/saved_model.pkl\")"
+    "joblib.dump(best_clf, \"../server/artifacts/saved_model.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "id": "8cc554a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open(\"output/class_dictionary.json\", \"w\") as f:\n",
+    "with open(\"../server/artifacts/class_dictionary.json\", \"w\") as f:\n",
     "    f.write(json.dumps(class_dict))"
    ]
   }
